25_may bug fixes

--- a/app/src/main/res/layout/activity_add_benificial_owner.xml
+++ b/app/src/main/res/layout/activity_add_benificial_owner.xml
@@ -364,9 +364,10 @@
                             android:id="@+id/OwnershipET"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:autofillHints="AUTOFILL_HINT_SMS_OTP"
                             android:fontFamily="@font/opensans_semibold"
+                            android:digits="0123456789"
                             android:imeOptions="actionDone"
+                            android:autofillHints="AUTOFILL_HINT_SMS_OTP"
                             android:inputType="number"
                             android:maxLength="3"
                             android:paddingVertical="@dimen/_12sdp"
