--- a/app/src/main/res/layout/activity_dbainfo_details.xml
+++ b/app/src/main/res/layout/activity_dbainfo_details.xml
@@ -107,6 +107,7 @@
                                     android:layout_width="match_parent"
                                     android:layout_height="match_parent"
                                     android:contentDescription="@string/profile_image"
+                                    android:src="@drawable/acct_profile"
                                     android:scaleType="fitXY"
                                     android:visibility="gone" />
 
