--- a/app/src/main/res/layout/fragment_business_dashboard.xml
+++ b/app/src/main/res/layout/fragment_business_dashboard.xml
@@ -61,7 +61,7 @@
                             android:background="@color/price"
                             android:fontFamily="@font/opensans_bold"
                             android:gravity="center"
-                            android:text="KM"
+                            android:text=""
                             android:textColor="@color/white"
                             android:textSize="@dimen/_16sdp"
                             android:visibility="gone" />
