--- a/app/src/main/res/layout/merchant_transactions_filter.xml
+++ b/app/src/main/res/layout/merchant_transactions_filter.xml
@@ -277,7 +277,7 @@
                     android:fontFamily="@font/opensans_semibold"
                     android:hint="(CYN)"
                     android:imeOptions="actionDone"
-                    android:inputType="numberDecimal"
+                    android:inputType="numberPassword"
                     android:maxLength="8"
                     android:maxLines="1"
                     android:singleLine="true"
@@ -315,7 +315,7 @@
                     android:hint="(CYN)"
                     android:autofillHints="AUTOFILL_HINT_SMS_OTP"
                     android:imeOptions="actionDone"
-                    android:inputType="numberDecimal"
+                    android:inputType="numberPassword"
                     android:maxLength="8"
                     android:maxLines="1"
                     android:singleLine="true"
