--- a/app/src/main/res/layout/activity_check_out_payment.xml
+++ b/app/src/main/res/layout/activity_check_out_payment.xml
@@ -49,10 +49,10 @@
         </LinearLayout>
 
 
-
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
+
             <LinearLayout
                 android:id="@+id/layoutLL"
                 android:layout_width="match_parent"
@@ -184,17 +184,18 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="@dimen/_72sdp"
                                     android:background="@color/white"
+                                    android:editable="false"
+                                    android:enabled="false"
                                     android:fontFamily="@font/opensans_bold"
                                     android:gravity="center_vertical|end"
                                     android:hint="0.00"
-                                    android:editable="false"
-                                    android:enabled="false"
                                     android:inputType="numberDecimal"
                                     android:maxLength="@string/maxlength"
                                     android:textColor="@color/primary_black"
                                     android:textColorHint="@color/light_gray"
                                     android:textCursorDrawable="@drawable/cursorcolor"
-                                    android:textSize="@dimen/_53ssp" />
+                                    android:textSize="@dimen/_53ssp"
+                                    tools:ignore="Deprecated" />
 
 
                                 <TextView
@@ -283,32 +284,124 @@
                 </androidx.cardview.widget.CardView>
             </LinearLayout>
 
-            <androidx.cardview.widget.CardView
-                android:id="@+id/nextCV"
+            <androidx.constraintlayout.motion.widget.MotionLayout
+                android:id="@+id/slide_to_confirm_ml"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/_43sdp"
-                android:layout_marginTop="@dimen/_14sdp"
+                android:layout_height="@dimen/_48sdp"
                 android:layout_alignParentBottom="true"
-                android:layout_marginStart="@dimen/_21sdp"
-                android:layout_marginEnd="@dimen/_21sdp"
-                android:layout_marginBottom="@dimen/_50sdp"
-                app:cardBackgroundColor="@color/primary_green"
-                app:cardCornerRadius="@dimen/_22sdp">
+                android:layout_marginStart="@dimen/_20sdp"
+                android:layout_marginTop="@dimen/_37sdp"
+                android:layout_marginEnd="@dimen/_20sdp"
+                android:layout_marginBottom="@dimen/_21sdp"
+                android:background="@drawable/shape_round_rectable"
+                android:elevation="@dimen/_2sdp"
+                app:layoutDescription="@xml/activity_swipe_unloack_scene"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
 
                 <TextView
+                    android:id="@+id/tv_lable_verify"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:fontFamily="@font/opensans_bold"
+                    android:layout_marginStart="8dp"
+                    android:ellipsize="end"
                     android:gravity="center"
-                    android:text="@string/pay"
-                    android:textColor="@color/white"
-                    android:textSize="@dimen/_12ssp" />
-            </androidx.cardview.widget.CardView>
+                    android:paddingEnd="16dp"
+                    android:paddingRight="16dp"
+                    android:text="Verifying"
+                    android:textColor="@color/primary_green"
+                    android:textSize="@dimen/_15sdp"
+                    android:textStyle="bold"
+                    android:visibility="gone"
+                    app:layout_constraintBottom_toBottomOf="@id/im_lock"
+                    app:layout_constraintStart_toEndOf="@+id/im_lock"
+                    app:layout_constraintTop_toTopOf="@+id/im_lock" />
+
+                <com.greenbox.coyni.utils.CustomeTextView.AnimatedGradientTextView
+                    android:id="@+id/tv_lable"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
+                    android:gravity="center"
+                    android:paddingEnd="16dp"
+                    android:paddingRight="16dp"
+                    android:text="Slide to Confirm"
+                    android:textColor="@color/primary_green"
+                    android:textSize="@dimen/_15sdp"
+                    android:textStyle="bold"
+                    android:visibility="visible"
+                    app:angle="45"
+                    app:chainUseRtl="true"
+                    app:colors="@array/default_gradient_colors"
+                    app:layout_constraintBottom_toBottomOf="@id/im_lock"
+                    app:layout_constraintStart_toEndOf="@+id/im_lock"
+                    app:layout_constraintTop_toTopOf="@+id/im_lock"
+                    app:maxFPS="24"
+                    app:simultaneousColors="8"
+                    app:speed="500" />
+                <!--            <TextView-->
+                <!--                android:id="@+id/tv_lable"-->
+                <!--                android:layout_width="match_parent"-->
+                <!--                android:layout_height="wrap_content"-->
+                <!--                android:layout_marginStart="8dp"-->
+                <!--                android:ellipsize="end"-->
+                <!--                android:gravity="center"-->
+                <!--                android:paddingEnd="16dp"-->
+                <!--                android:text="@string/slide_to_confirm"-->
+                <!--                android:textColor="@color/primary_color"-->
+                <!--                android:textSize="@dimen/_15ssp"-->
+                <!--                android:textStyle="bold"-->
+                <!--                app:layout_constraintBottom_toBottomOf="@id/im_lock"-->
+                <!--                app:layout_constraintStart_toEndOf="@+id/im_lock"-->
+                <!--                app:layout_constraintTop_toTopOf="@+id/im_lock" />-->
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/im_lock"
+                    android:layout_width="@dimen/_44sdp"
+                    android:layout_height="@dimen/_44sdp"
+                    android:layout_marginStart="@dimen/_2sdp"
+                    android:layout_marginTop="@dimen/_2sdp"
+                    android:layout_marginBottom="@dimen/_2sdp"
+                    app:cardBackgroundColor="@color/slidebtn_bg"
+                    app:cardCornerRadius="@dimen/_22sdp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent">
+
+                    <androidx.appcompat.widget.AppCompatImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="center"
+                        android:src="@drawable/ic_double_left" />
+
+                </androidx.cardview.widget.CardView>
+
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/im_lock_"
+                    android:layout_width="@dimen/_44sdp"
+                    android:layout_height="@dimen/_44sdp"
+                    android:layout_marginTop="@dimen/_2sdp"
+                    android:layout_marginEnd="@dimen/_2sdp"
+                    android:layout_marginBottom="@dimen/_2sdp"
+                    android:visibility="invisible"
+                    app:cardBackgroundColor="@color/white"
+                    app:cardCornerRadius="@dimen/_22sdp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent">
+
+                    <ProgressBar
+                        android:layout_width="@dimen/_20sdp"
+                        android:layout_height="@dimen/_20sdp"
+                        android:layout_gravity="center" />
+
+                </androidx.cardview.widget.CardView>
+
+            </androidx.constraintlayout.motion.widget.MotionLayout>
 
         </RelativeLayout>
     </LinearLayout>
-
 
 
 </LinearLayout>
