--- a/app/src/main/res/layout/activity_pay_request.xml
+++ b/app/src/main/res/layout/activity_pay_request.xml
@@ -229,71 +229,18 @@
 
                         </RelativeLayout>
 
-                        <!--                                                <LinearLayout-->
-                        <!--                                                    android:id="@+id/il_amount"-->
-                        <!--                                                    android:layout_width="match_parent"-->
-                        <!--                                                    android:layout_height="wrap_content"-->
-                        <!--                                                    android:gravity="center_horizontal"-->
-                        <!--                                                    android:orientation="horizontal">-->
-
-                        <!--                                                    <TextView-->
-                        <!--                                                        android:id="@+id/tvCurrency"-->
-                        <!--                                                        android:layout_width="wrap_content"-->
-                        <!--                                                        android:layout_height="wrap_content"-->
-                        <!--                                                        android:layout_centerVertical="true"-->
-                        <!--                                                        android:layout_toLeftOf="@+id/lyAmount"-->
-                        <!--                                                        android:fontFamily="@font/opensans_bold"-->
-                        <!--                                                        android:paddingTop="@dimen/_1sdp"-->
-                        <!--                                                        android:paddingBottom="@dimen/_15sdp"-->
-                        <!--                                                        android:text="$"-->
-                        <!--                                                        android:textColor="@color/primary_black"-->
-                        <!--                                                        android:textSize="@dimen/_40ssp"-->
-                        <!--                                                        android:visibility="gone" />-->
-
-                        <!--                                                    <LinearLayout-->
-                        <!--                                                        android:id="@+id/lyAmount"-->
-                        <!--                                                        android:layout_width="wrap_content"-->
-                        <!--                                                        android:layout_height="wrap_content"-->
-                        <!--                                                        android:layout_centerVertical="true"-->
-                        <!--                                                        android:layout_toLeftOf="@+id/imgConvert"-->
-                        <!--                                                        android:orientation="horizontal">-->
-
-                        <!--                                                        <EditText-->
-                        <!--                                                            android:id="@+id/payrequestET"-->
-                        <!--                                                            android:layout_width="wrap_content"-->
-                        <!--                                                            android:layout_height="wrap_content"-->
-                        <!--                                                            android:background="@color/white"-->
-                        <!--                                                            android:fontFamily="@font/opensans_bold"-->
-                        <!--                                                            android:gravity="center_vertical|right"-->
-                        <!--                                                            android:hint="0.00"-->
-                        <!--                                                            android:inputType="numberDecimal"-->
-                        <!--                                                            android:maxLength="@string/maxlength"-->
-                        <!--                                                            android:textColor="@color/primary_black"-->
-                        <!--                                                            android:textColorHint="@color/light_gray"-->
-                        <!--                                                            android:textCursorDrawable="@drawable/cursorcolor"-->
-                        <!--                                                            android:textSize="@dimen/_53ssp" />-->
-
-                        <!--                                                        <TextView-->
-                        <!--                                                           android:id="@+id/coyniTV"-->
-                        <!--                                                           android:layout_width="wrap_content"-->
-                        <!--                                                            android:layout_height="wrap_content"-->
-                        <!--                                                            android:fontFamily="@font/opensans_bold"-->
-                        <!--                                                           android:text=" CYN"-->
-                        <!--                                                           android:textColor="@color/primary_black"-->
-                        <!--                                                           android:textSize="@dimen/_12ssp"-->
-                        <!--                                                           android:visibility="visible"></TextView>-->
-
-                        <!--                                                    </LinearLayout>-->
-
-                        <!--                                                    <ImageView-->
-                        <!--                                                        android:id="@+id/imgConvert"-->
-                        <!--                                                        android:layout_width="wrap_content"-->
-                        <!--                                                        android:layout_marginTop="@dimen/_40sdp"-->
-                        <!--                                                        android:layout_height="wrap_content"-->
-                        <!--                                                        android:src="@drawable/ic_download" />-->
-
-                        <!--                                                </LinearLayout>-->
-
+                        <TextView
+                            android:id="@+id/tvError"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_horizontal"
+                            android:layout_marginLeft="@dimen/_10sdp"
+                            android:layout_marginTop="@dimen/_10sdp"
+                            android:layout_marginRight="@dimen/_10sdp"
+                            android:text=""
+                            android:textColor="@color/error"
+                            android:textSize="@dimen/_10ssp"
+                            android:visibility="gone"></TextView>
 
                         <LinearLayout
                             android:id="@+id/lyBalance"
