--- a/app/src/main/res/layout/activity_filters.xml
+++ b/app/src/main/res/layout/activity_filters.xml
@@ -686,6 +686,7 @@
                             android:layout_height="@dimen/_35sdp"
                             android:layout_marginStart="@dimen/_10sdp"
                             android:layout_weight="1"
+                            android:autofillHints="AUTOFILL_HINT_SMS_OTP"
                             android:background="@android:color/transparent"
                             android:digits="0123456789."
                             android:fontFamily="@font/opensans_semibold"
@@ -725,6 +726,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="@dimen/_35sdp"
                             android:layout_marginStart="@dimen/_10sdp"
+                            android:autofillHints="AUTOFILL_HINT_SMS_OTP"
                             android:background="@android:color/transparent"
                             android:fontFamily="@font/opensans_semibold"
                             android:hint="(CYN)"
