--- a/app/src/main/res/layout/transactions_filter.xml
+++ b/app/src/main/res/layout/transactions_filter.xml
@@ -382,8 +382,10 @@
                             android:layout_height="@dimen/_35sdp"
                             android:layout_marginStart="@dimen/_10sdp"
                             android:layout_weight="1"
+                            android:autofillHints="AUTOFILL_HINT_SMS_OTP"
                             android:background="@android:color/transparent"
                             android:digits="0123456789."
+                            android:editable="true"
                             android:fontFamily="@font/opensans_semibold"
                             android:hint="(CYN)"
                             android:imeOptions="actionDone"
@@ -395,7 +397,6 @@
                             android:textColorHint="@color/light_gray"
                             android:textCursorDrawable="@drawable/cursor_color"
                             android:textIsSelectable="false"
-                            android:editable="true"
                             android:textSize="@dimen/_11ssp" />
 
                     </LinearLayout>
@@ -422,13 +423,14 @@
                             android:layout_width="match_parent"
                             android:layout_height="@dimen/_35sdp"
                             android:layout_marginStart="@dimen/_10sdp"
+                            android:autofillHints="AUTOFILL_HINT_SMS_OTP"
                             android:background="@android:color/transparent"
+                            android:editable="true"
                             android:fontFamily="@font/opensans_semibold"
                             android:hint="(CYN)"
                             android:imeOptions="actionDone"
                             android:inputType="numberDecimal"
                             android:maxLength="@string/maxlength"
-                            android:editable="true"
                             android:textColor="@color/primary_black"
                             android:textColorHint="@color/light_gray"
                             android:textCursorDrawable="@drawable/cursor_color"
