--- a/app/src/main/res/layout/ret_email_list_item.xml
+++ b/app/src/main/res/layout/ret_email_list_item.xml
@@ -18,14 +18,23 @@
             android:layout_width="@dimen/_28sdp"
             android:layout_height="@dimen/_28sdp"
             android:layout_marginLeft="@dimen/_10sdp"
-            app:cardCornerRadius="@dimen/_14sdp">
+            app:cardCornerRadius="@dimen/_14sdp"
+            android:background="@color/white">
 
-            <ImageView
-                android:id="@+id/imgProfilePic"
+            <TextView
+                android:id="@+id/profileTitle"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:scaleType="fitXY"
-                android:src="@drawable/ic_profilelogo" />
+                android:background="@color/primary_green"
+                android:fontFamily="@font/opensans_semibold"
+                android:gravity="center"
+                android:maxLength="2"
+                android:text=""
+                android:textAlignment="center"
+                android:textColor="@color/white"
+                android:textSize="@dimen/_14ssp"
+                android:visibility="visible" />
+
         </androidx.cardview.widget.CardView>
 
         <LinearLayout
