--- a/app/src/main/res/layout/activity_pay_request_scan.xml
+++ b/app/src/main/res/layout/activity_pay_request_scan.xml
@@ -27,6 +27,39 @@
         app:frameThickness="5dp"
         app:maskColor="#2CFDFBFB" />
 
+    <LinearLayout
+        android:id="@+id/deny_camera_access"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:visibility="gone"
+        android:orientation="vertical">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:text="coyni needs access to your camera to\n scan a QR code"
+            android:textColor="@color/primary_black"
+            android:textSize="@dimen/_12ssp"
+            />
+        <androidx.cardview.widget.CardView
+            android:id="@+id/clickToGoSettings"
+            android:layout_width="@dimen/_130sdp"
+            android:layout_height="@dimen/_25sdp"
+            android:layout_marginTop="@dimen/_5sdp"
+            app:cardCornerRadius="@dimen/_5sdp"
+            >
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@drawable/corner_black_color"
+                android:text="Enable camera access"
+                android:gravity="center"/>
+        </androidx.cardview.widget.CardView>
+
+
+    </LinearLayout>
+
     <ImageView
         android:id="@+id/closeBtnSC"
         android:layout_width="wrap_content"
