--- a/app/src/main/res/layout/ret_email_list_item.xml
+++ b/app/src/main/res/layout/ret_email_list_item.xml
@@ -19,13 +19,26 @@
             android:layout_height="@dimen/_28sdp"
             android:layout_marginLeft="@dimen/_10sdp"
             app:cardCornerRadius="@dimen/_14sdp">
-
             <ImageView
                 android:id="@+id/imgProfilePic"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:scaleType="fitXY"
+                android:visibility="visible"
                 android:src="@drawable/ic_profilelogo" />
+
+            <TextView
+                android:id="@+id/b_imageTextTV"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/primary_green"
+                android:fontFamily="@font/opensans_bold"
+                android:gravity="center"
+                android:text="AO"
+                android:textColor="@color/white"
+                android:textSize="@dimen/_18ssp"
+                android:visibility="visible" />
+
         </androidx.cardview.widget.CardView>
 
         <LinearLayout
