--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -553,6 +553,7 @@
                                         android:layout_width="@dimen/_8sdp"
                                         android:layout_height="@dimen/_8sdp"
                                         android:layout_marginTop="@dimen/_2sdp"
+                                        android:layout_marginEnd="@dimen/_5sdp"
                                         app:cardBackgroundColor="@color/under_review_blue"
                                         app:cardCornerRadius="@dimen/_4sdp" />
 
