--- a/app/src/main/res/layout/dialog_permission.xml
+++ b/app/src/main/res/layout/dialog_permission.xml
@@ -42,7 +42,8 @@
                 android:fontFamily="@font/opensans_regular"
                 android:textAlignment="center"
                 android:textColor="@color/primary_black"
-                android:textSize="@dimen/_11ssp" />
+                android:textSize="@dimen/_11ssp"
+                android:layout_marginHorizontal="@dimen/_10sdp"/>
         </LinearLayout>
             <View
                 android:layout_width="match_parent"
